Typo: Solution MISLE.C27 space in "at" (Jenna Fontaine)
Typo: Sage MISLE, nonexistent "CINMN" acronym to "CINM" (Bruno Mello)
Typo: Subsection VS.VS, grammar, agreement in number (Chris Spalding)
Typo: Solution VS.M12, total garbage from LaTeX/XML conversion (Jenna Fontaine)
Typo: Example SM32 "show" to "shown" (Jenna Fontaine)
Typo: Sage VS "thse" to "these" (Jenna Fontaine)


v3.10 2013/08/20
~~~~~~~~~~~~~~~~
New:  Exercise MM.T12, Theorem HMIP reprised
Change:  Proof of Theorem OD uses normality of diagonal matrices (Hunter Wills)
Typo: Miscellaneous edits (David Farmer)
Typo: Solution ILT.C29, inner span should be a set (Aysha Orta)
Typo: Misspelling in Acknowlegements (Peter Wimberger)


v3.00 2012/12/05
~~~~~~~~~~~~~~~~
New:  Diagrams NSLT, SLT (surjective linear transformations)
New:  Diagrams KPI, IVLT (pre-images, invertible linear transformations)
New:  Diagram KRI (kernel and range isomorphisms)
New:  Exercise NM.T31 (with solution)
New:  Exercises LT.T30 and LT.T31
New:  Exercise LISS.T51, converse of Theorem VRRB
New:  Exercise LISS.T20, subset of linearly independent set is linearly independent
New:  Reading Questions, Section OD
New:  Diagram AIVS, Section IVLT
New:  Discussion following Theorem OBNM
New:  Exercises MM.T35, OD.T10, OD.T20
New:  Exercise VR.M20 (Tyler Ueltschi)
Edit:  Explained  min(m,n)  in Exercise PD.T15
Edit:  More on induction in Proof Technique I (Dan Messenger)
Edit:  Added multiplicities to Solution EE.C19 (Duncan Bennett)
Edit:  Subsection IVLT.SLELT, reference Definition MVP for T's definition (Kyle Whitcomb)
Edit:  Completed Solution ILT.C27 (Duncan Bennett)
Edit:  About 130 line-break adjustments, for 5 inch text width at 10pt
Edit:  Edits, Subsection CB.CELT
Edit:  Solution SLT.C29, added solution to surjective question (Dan Messenger)
Edit:  Removed two forward references to Chapter MD (Aidam Meacham)
Edit:  Proof of Theorem NME7 clarified (Kevin Halasz)