@@ -858,7 +858,7 @@ W =
 }}
 </equation>
 </problem>
-<solution contributor="chrisblack">For $\vect{b}$ to be an element of $W=\spn{S}$ there must be linear combination of the vectors in $S$ that equals $\vect{b}$ (<acroref type="definition" acro="SSCV" />).  The existence of such scalars is equivalent to the linear system $\linearsystem{A}{\vect{b}}$ being consistent, where $A$ is the matrix whose columns are the vectors from $S$ (<acroref type="theorem" acro="SLSLC" />).
+<solution contributor="chrisblack">For $\vect{b}$ to be an element of $W=\spn{S}$ there must be a linear combination of the vectors in $S$ that equals $\vect{b}$ (<acroref type="definition" acro="SSCV" />).  The existence of such scalars is equivalent to the linear system $\linearsystem{A}{\vect{b}}$ being consistent, where $A$ is the matrix whose columns are the vectors from $S$ (<acroref type="theorem" acro="SLSLC" />).
 <alignmath>
 \begin{bmatrix}
 <![CDATA[3 & 1 & 1 & 2 & 4\\]]>
@@ -888,7 +888,7 @@ W =\spn{\set{
 }}
 </equation>
 </problem>
-<solution contributor="chrisblack">For $\vect{b}$ to be an element of $W=\spn{S}$ there must be linear combination of the vectors in $S$ that equals $\vect{b}$ (<acroref type="definition" acro="SSCV" />).  The existence of such scalars is equivalent to the linear system $\linearsystem{A}{\vect{b}}$ being consistent, where $A$ is the matrix whose columns are the vectors from $S$ (<acroref type="theorem" acro="SLSLC" />).
+<solution contributor="chrisblack">For $\vect{b}$ to be an element of $W=\spn{S}$ there must be a linear combination of the vectors in $S$ that equals $\vect{b}$ (<acroref type="definition" acro="SSCV" />).  The existence of such scalars is equivalent to the linear system $\linearsystem{A}{\vect{b}}$ being consistent, where $A$ is the matrix whose columns are the vectors from $S$ (<acroref type="theorem" acro="SLSLC" />).
 <alignmath>
 \begin{bmatrix}
 <![CDATA[1 & 1 & 2 & 1\\]]>
@@ -920,7 +920,7 @@ W = \spn{\set{
 }}
 </equation>
 </problem>
-<solution contributor="chrisblack">For $\vect{b}$ to be an element of $W=\spn{S}$ there must be linear combination of the vectors in $S$ that equals $\vect{b}$ (<acroref type="definition" acro="SSCV" />).  The existence of such scalars is equivalent to the linear system $\linearsystem{A}{\vect{b}}$ being consistent, where $A$ is the matrix whose columns are the vectors from $S$ (<acroref type="theorem" acro="SLSLC" />).
+<solution contributor="chrisblack">For $\vect{b}$ to be an element of $W=\spn{S}$ there must be a linear combination of the vectors in $S$ that equals $\vect{b}$ (<acroref type="definition" acro="SSCV" />).  The existence of such scalars is equivalent to the linear system $\linearsystem{A}{\vect{b}}$ being consistent, where $A$ is the matrix whose columns are the vectors from $S$ (<acroref type="theorem" acro="SLSLC" />).
 <alignmath>
 \begin{bmatrix}
 <![CDATA[1 & 1 & 0 & 1 & 2\\]]>
