@@ -42,6 +42,7 @@ Typo: Subsection VS.VS, grammar, agreement in number (Chris Spalding)
 Typo: Solution VS.M12, total garbage from LaTeX/XML conversion (Jenna Fontaine)
 Typo: Example SM32 "show" to "shown" (Jenna Fontaine)
 Typo: Sage VS "thse" to "these" (Jenna Fontaine)
+Typo: Solution VS.C15, VS.C16, VS.C17, "be linear" to "be a linear" (Jenna Fontaine)
 
 
 v3.10 2013/08/20
